[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "burden"
version = "1.1.7"
description = ""
authors = [ "Eugene Gardner <eugene.gardner@mrc-epid.cam.ac.uk>",]
readme = "README.md"
repository = "https://github.com/mrcepid-rap/burden"
licence = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
dxpy = "0.346.0"
importlib-resources = "5.12.0"
setuptools = "60.2.0"
numpy = "1.23.2"
pandas = "1.5.2"
scipy = "1.10.1"
statsmodels = "0.13.2"
zstd = "1.5.5.1"
toml = "^0.10.2"
pytest = "^7.4.0"
