[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "burden"
version = "2.0.0"
description = ""
authors = [
  { name = "Eugene Gardner", email = "eugene.gardner@mrc-epid.cam.ac.uk" },
      { name = "Alish Palmos", email = "alish.palmos@insmed.com" }
]
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "dxpy==0.346.0",
    "importlib-resources==5.12.0",
    "setuptools==60.2.0",
    "numpy==1.23.2",
    "pandas==1.5.2",
    "scipy==1.10.1",
    "statsmodels==0.13.2",
    "zstd==1.5.5.1",
    "toml>=0.10.2,<0.11.0",
    "pytest>=7.4.0,<8.0.0",
    "general-utilities @ git+https://github.com/mrcepid-rap/general_utilities.git@bugfix/add_crrent_directory_as_mount_tested",
    "matplotlib>=3.7.5",
]

[project.urls]
Repository = "https://github.com/mrcepid-rap/burden"

